--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mdx-js/loader": "^2.1.1",
     "@mdx-js/react": "^2.1.1",
     "@next/mdx": "^12.1.6",
-    "next": "12.1.6",
+    "next": "^12.1.4",
     "next-themes": "^0.2.0",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
