--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "12.1.6",
     "next-i18next": "^11.0.0",
     "postcss": "^8.4.13",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-lazy-load-image-component": "^1.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.0.24",
