--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-themes": "^0.2.0",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
+    "react-error-boundary": "^3.1.4",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
