--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-themes": "^0.2.0",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.6",
@@ -28,6 +29,7 @@
     "eslint-config-next": "12.1.6",
     "next-i18next": "^11.0.0",
     "postcss": "^8.4.13",
+    "process": "^0.11.10",
     "react-copy-to-clipboard": "^5.1.0",
     "react-lazy-load-image-component": "^1.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
