--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,28 @@
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
 
 # testing
+/coverage
 
 # next.js
 /.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
 .env*.local
@@ -14,5 +31,5 @@
 # vercel
 .vercel
 
-# vscode
-.vscode
+# todo
+Todo.txt
