style: change button components and remove alert

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "12.1.6",
     "next-i18next": "^11.0.0",
     "postcss": "^8.4.13",
+    "postcss-reporter": "^7.0.5",
     "process": "^0.11.10",
     "react-copy-to-clipboard": "^5.1.0",
     "react-lazy-load-image-component": "^1.5.4",
